--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.17.0
   feature_discovery: any
   flutter_staggered_animations: any
+  flutter_local_notifications: any
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +56,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/animations/
+    - lib/Icons/
 
   fonts:
     - family: Poppins
